--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">广东移动采集</string>
+    <string name="app_name">广东移动采集_质检</string>
     <string name="version_name">v2.3</string>
 </resources>
